# xybench

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: spec.md
examples/: basic_review.py  langgraph_example.py  reviewer_app.py
src/xybench/: __init__.py  models.py  notify.py  review.py  storage.py
src/xybench/integrations/: __init__.py  langgraph.py
src/xybench/streamlit/: __init__.py  components.py
tests/: test_models.py  test_notify.py  test_review.py  test_storage.py
